Refactor OreVein class for better functionality and readability
- Improved the getOresInArea method logic to correctly collect all ore blocks in the specified area.
- Used collect(Collectors.toList()) instead of toList() for compatibility.
- Enhanced formatting and indentation for better code readability.
- Updated comments and removed unnecessary code.

Tested the changes to ensure proper functionality.